--- a/helm/baremetal-update-operator-chart/Chart.yaml
+++ b/helm/baremetal-update-operator-chart/Chart.yaml
@@ -1,2 +1,5 @@
+apiVersion: v1
 name: baremetal-update-operator-chart
-version: 1.0.0-[[ .SHA ]]
+version: "[[ .Version ]]"
+description: Makes sure CP node labels are up to date.
+home: https://github.com/giantswarm/baremetal-update-operator
