--- a/helm/baremetal-update-operator-chart/templates/update-operator.yaml
+++ b/helm/baremetal-update-operator-chart/templates/update-operator.yaml
@@ -1,15 +1,19 @@
-apiVersion: extensions/v1beta1
+apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: container-linux-update-operator
   namespace: reboot-coordinator
 spec:
   replicas: 1
+  selector:
+    matchLabels:
+      app: container-linux-update-operator
   template:
     metadata:
       labels:
         app: container-linux-update-operator
     spec:
+      serviceAccountName: "reboot-coordinator"
       containers:
       - name: update-operator
         image: quay.io/coreos/container-linux-update-operator:v0.4.1
